fixtures/valid/declared-artifact-lane/src/consumer/public.ts
import result from "../producer/artifacts/report-v1/result.json";
export const consumerValue = result;
