fixtures/invalid/computed-dynamic-fail-closed/src/core/public.ts
const moduleName = "./local";
export const loadValue = import(moduleName);
